# voxcode

./: .gitignore  index.html  package-lock.json  package.json
sidecar/: package.json  tsconfig.json
sidecar/src/: index.ts  permission-handler.ts  protocol.ts  session.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  resample.rs  transcribe.rs  vad.rs
src-tauri/src/commands/: audio.rs  chat.rs  mod.rs  permissions.rs
src-tauri/src/sidecar/: manager.rs  protocol.rs
src/components/approval/: ApprovalBanner.tsx  ApprovalCard.tsx  ToolPreview.tsx
src/components/audio/: AudioWaveform.tsx  MicButton.tsx  TranscriptionPreview.tsx
src/components/chat/: ChatContainer.tsx  InputBar.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  StreamingText.tsx  ToolUseBlock.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/layout/: Header.tsx  StatusBar.tsx
src/components/session/: SessionSidebar.tsx
src/components/settings/: SettingsDialog.tsx
src/hooks/: useAudio.ts  useChat.ts  useKeyboardShortcuts.ts
src/lib/: tauri.ts  types.ts
src/stores/: chatStore.ts  sessionStore.ts  settingsStore.ts
