[package]
name = "voxcode"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxcode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "voxcode"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
cpal = "0.15"
rubato = "0.16"
whisper-rs = { version = "0.14", features = [] }
ringbuf = "0.4"
